--- a/index.html
+++ b/index.html
@@ -4,7 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona logowania</title>
-    <link rel="stylesheet" href="https://marinetboy.github.io/strona/styles.css">
+    <style>
+        /* Resetowanie domyślnych stylów przeglądarki */
+        body, html {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        /* Stylizacja gradientu tła */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background-attachment: fixed;
+            margin: 0;
+        }
+
+        /* Stylizacja kontenera logowania */
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
+            width: 350px;
+            text-align: center;
+            backdrop-filter: blur(10px);
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            color: #333333;
+            font-weight: 500;
+            font-size: 24px;
+        }
+
+        /* Stylizacja pól formularza */
+        .input-box {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+
+        .input-box label {
+            font-size: 14px;
+            color: #555555;
+        }
+
+        .input-box input {
+            width: 100%;
+            padding: 12px;
+            margin-top: 8px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 14px;
+            background-color: #f9f9f9;
+            transition: all 0.3s ease;
+        }
+
+        .input-box input:focus {
+            border-color: #6a11cb;
+            outline: none;
+            box-shadow: 0 0 5px rgba(106, 17, 203, 0.5);
+        }
+
+        /* Stylizacja przycisku logowania */
+        .login-button {
+            width: 100%;
+            padding: 12px;
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            color: #ffffff;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 10px;
+            transition: background 0.3s ease;
+        }
+
+        .login-button:hover {
+            background: linear-gradient(135deg, #5e0fc8 0%, #1f66e0 100%);
+        }
+
+        /* Nowoczesne animacje przy wciśnięciu przycisku */
+        .login-button:active {
+            transform: scale(0.98);
+        }
+
+        /* Responsywność dla mniejszych ekranów */
+        @media (max-width: 400px) {
+            .login-container {
+                width: 90%;
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="login-container">
