--- a/index.html
+++ b/index.html
@@ -19,103 +19,136 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(135deg, #1a1a1a 0%, #333333 100%);
             background-attachment: fixed;
-            margin: 0;
         }
 
         /* Stylizacja kontenera logowania */
         .login-container {
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: #2c2c2c;
             padding: 40px;
-            box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
-            border-radius: 12px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
             width: 350px;
             text-align: center;
-            backdrop-filter: blur(10px);
+            color: #ffffff;
         }
 
         h2 {
             margin-bottom: 20px;
-            color: #333333;
-            font-weight: 500;
-            font-size: 24px;
+            color: #ffffff;
+            font-weight: 600;
+            font-size: 22px;
+        }
+
+        /* Linki w prawym górnym rogu */
+        .forgot-password {
+            text-align: right;
+            margin-bottom: 20px;
+        }
+
+        .forgot-password a {
+            color: #f05a5a;
+            font-size: 12px;
+            text-decoration: none;
+        }
+
+        .forgot-password a:hover {
+            text-decoration: underline;
         }
 
         /* Stylizacja pól formularza */
         .input-box {
             margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .input-box label {
-            font-size: 14px;
-            color: #555555;
+            position: relative;
         }
 
         .input-box input {
             width: 100%;
             padding: 12px;
-            margin-top: 8px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
+            padding-left: 40px;
+            border: none;
+            border-radius: 5px;
             font-size: 14px;
-            background-color: #f9f9f9;
-            transition: all 0.3s ease;
+            background-color: #444444;
+            color: #ffffff;
         }
 
-        .input-box input:focus {
-            border-color: #6a11cb;
-            outline: none;
-            box-shadow: 0 0 5px rgba(106, 17, 203, 0.5);
+        .input-box input::placeholder {
+            color: #bbbbbb;
+        }
+
+        /* Ikony w polach formularza */
+        .input-box .icon {
+            position: absolute;
+            top: 50%;
+            left: 10px;
+            transform: translateY(-50%);
+            color: #bbbbbb;
         }
 
         /* Stylizacja przycisku logowania */
         .login-button {
             width: 100%;
             padding: 12px;
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background: #f05a5a;
             color: #ffffff;
             border: none;
-            border-radius: 8px;
+            border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
             margin-top: 10px;
-            transition: background 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .login-button .icon {
+            margin-right: 8px;
         }
 
         .login-button:hover {
-            background: linear-gradient(135deg, #5e0fc8 0%, #1f66e0 100%);
+            background: #e04e4e;
         }
 
-        /* Nowoczesne animacje przy wciśnięciu przycisku */
-        .login-button:active {
-            transform: scale(0.98);
+        /* Link do rejestracji */
+        .register-link {
+            margin-top: 15px;
+            font-size: 12px;
         }
 
-        /* Responsywność dla mniejszych ekranów */
-        @media (max-width: 400px) {
-            .login-container {
-                width: 90%;
-                padding: 20px;
-            }
+        .register-link a {
+            color: #f05a5a;
+            text-decoration: none;
+        }
+
+        .register-link a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
         <h2>Zaloguj się</h2>
+        <div class="forgot-password">
+            <a href="#">Zapomniałeś hasła?</a>
+        </div>
         <form>
             <div class="input-box">
-                <label for="username">Nazwa użytkownika</label>
-                <input type="text" id="username" placeholder="Wpisz nazwę użytkownika" required>
+                <span class="icon">&#128100;</span>
+                <input type="text" placeholder="Nazwa użytkownika" required>
             </div>
             <div class="input-box">
-                <label for="password">Hasło</label>
-                <input type="password" id="password" placeholder="Wpisz hasło" required>
+                <span class="icon">&#128274;</span>
+                <input type="password" placeholder="Hasło" required>
             </div>
-            <button type="submit" class="login-button">Zaloguj się</button>
+            <button type="submit" class="login-button">
+                <span class="icon">&#128273;</span>Zaloguj się
+            </button>
         </form>
+        <div class="register-link">
+            <a href="#">Kliknij tutaj, aby utworzyć konto</a>
+        </div>
     </div>
 </body>
 </html>
